--- a/main-2020.tex
+++ b/main-2020.tex
@@ -148,6 +148,7 @@
 \newpage
 
 \input{Introduction}
+\input{Adaptive_Filters1}
 %\input{AASP_Math_general}
 %\input{AASP_Math_derivative}
 %\input{AASP_Math_Minimization}
